# CircuitPython_MicroOSC

./: LICENSE  README.rst  README.rst.license  microosc.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  api.rst.license  conf.py  examples.rst  index.rst  requirements.txt
examples/: microosc_simplesend.py  microosc_simplesend_cpython.py  microosc_simpletest.py  microosc_simpletest_cpython.py
tests/: __init__.py  test_create_packet.py  test_string_pack.py
